# arc

./: .gitignore  .gitmodules  Dockerfile-mpspdz  Makefile  README.md  artifact.ipynb  artifact.md  data_visualization.ipynb  doe-suite-setup.wsl.patch  doe-suite.patch  fetch_results.sh  mp-spdz-debug-changes.patch  output.txt  prepare-mp-spdz.sh  pyproject.toml  template-setup-env.local.sh.default  test.zsh  test_rendezvouz.py
ansible-utils/ami-generator/: README.md  create_mp_spdz_ami.yml  hosts.default  site2_vars.yml
ansible-utils/setup-custom-controller/: ansible.cfg  create_aws.yml  destroy_aws.yml  pyproject.toml  setup_controller.yml  site2_vars.yml  tokens.default.yml
ansible-utils/setup-custom-controller/resources/: inventory_aws_ec2.yml.j2  my_hosts.template.j2  nopasswdsudo2.j2  setup-controller.patch.j2  setup-env.local.sh.j2
ansible-utils/test-mpspdz-compile/: .gitignore  ansible.cfg  create_aws.yml  create_mp_spdz_ami.yml  destroy_aws.yml  hosts.yml  site.yml  site2.yml  site2_vars.yml  size3.yml
doe-suite-config/: pyproject.toml
doe-suite-config/designs/: audit.yml  audit_3pc_mal.yml  audit_consistency.yml  audit_dishonest.yml  audit_fairness.yml  audit_fairness_wan.yml  audit_kernelshap.yml  audit_knnshapley.yml  audit_knnshapley_bert.yml  audit_knnshapley_bert_mal.yml  audit_knnshapley_bert_mal_ours.yml  audit_knnshapley_bert_wan.yml  basic.yml  (+41 more)
mpc-consistency/: Cargo.toml  README  test.zsh  test_e2e.zsh  test_e2e_2pc.zsh  test_pp.zsh  test_singleprover.zsh
mpc-consistency/mpc-net/: Cargo.toml
mpc-consistency/mpc-net/src/: lib.rs  multi.rs  two.rs
mpc-consistency/src/: common.rs  exponentiate_cerebro.rs  gen_commitments.rs  gen_commitments_ipa.rs  gen_commitments_kzg.rs  gen_commitments_ped.rs  gen_pp.rs  gen_pp_ipa.rs  gen_pp_kzg.rs  gen_pp_ped.rs  kzg.rs  mpspdz.rs  perf_trace_structured.rs  prove_verify.rs  prove_verify_ipa.rs  prove_verify_kzg.rs  prove_verify_ped.rs
mpc-consistency/src/ped_pc/: data_structures.rs  mod.rs
notebooks/: consistency.ipynb  storage.ipynb
script_utils/: README.md  audit_function_utils.py  config.py  consistency_cerebro.py  input_consistency.py  ml_modified.py  output_commit.py  output_utils.py  test_util.py  timers.py
scripts/: accuracy.mpc  array_assign_bug.mpc  audit-data-import-test2.mpc  audit_fairness.mpc  audit_mnist.mpc  audit_owner_knn.mpc  audit_owner_score.mpc  audit_owner_unlearn.mpc  audit_prediction_shap.mpc  audit_robustness.mpc  audit_rs.mpc  audit_sample_knnshapley.mpc  audit_sample_traceback.mpc  auditing_function.mpc  auditing_function_benchmark_script.mpc  auditing_function_benchmark_script_v2.mpc  auditing_function_debug.mpc  auditing_function_debug2.mpc  auditing_function_debug_modified_training.mpc  auditing_function_v2.mpc  bit_decomp.mpc  calculate_primes.py  compare_bert_layers.mpc  compute_test_crossentropy.py  elementwise_op_bug.mpc  evaluate_bert.mpc  evaluate_mnli.mpc  falcon_alex.mpc  falcon_alex_adapt.mpc  individual_cerebro.mpc  inference.mpc  inference_accuracy.mpc  sha.mpc  single_cerebro.mpc  sort_compare.mpc  standalone_cerebro.mpc  standalone_sha3.mpc  test-assign.mpc  test-cross-entropy.mpc  test-mad-score-2.mpc  (+25 more)
tests/: test_utils.mpc
utils/: README.md  experiment-runner.sh  toy-example.sh
(+159 files in other folders)
