[tool.poetry]
name = "arc"
version = "0.1.0"
description = ""
authors = ["Hidde Lycklama <hidde.lycklama@inf.ethz.ch>", "Nicolas Kuechler <nicolas.kuechler@inf.ethz.ch>", "Alexander Mandt <amandt@student.ethz.ch>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.11"
psutil = "^5.9.0"
pyparsing = "^3.0.9"
click = "^8.1.3"
requests = "^2.28.1"
pydantic = "^1.9.1"
pandas = "^1.4.3"
numpy = "^1.23.1"
matplotlib = "^3.8.2"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
statsmodels = "^0.13.2"
"ruamel.yaml" = "^0.17.21"
torch = "^1.13.1"
torchvision = "*"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"
transformers = "^4.40.2"
pyarrow = "16.0.0"
datasets = "^2.19.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
